CRMT * Roles to allow access w/o login on demo site * Update Content * Hide People Name field * People have Zip & L3 * Fix some Form Styling * map_panel_legend max-width =  400px (Otherwise it is not possible to simultaneously view the map & legend if the legend is too big) * Video Page * Extra buttons on Homepage * Customize Reports CRMT + DRMP * Style Alerts under Dropdown menu * Add User email to settings menu

--- a/static/themes/DRMP/newsfeed.css
+++ b/static/themes/DRMP/newsfeed.css
@@ -181,6 +181,10 @@ label#post-cms_post_created_on-date-filter__label{
 	margin-left: 24px;
 }
 
+button.ui-multiselect.ui-widget.ui-state-default.ui-corner-all {
+    width: 100% !important;
+}
+
 /* Large desktop */
 @media (min-width: 1200px) { 
     #post-cms_post_created_on-date-filter-ge,
